# crengine

./: .clang-tidy  .codacy.yml  .gitignore  .stylelintignore  .stylelintrc.json  .travis.yml  BIDI_ARCHITECTURE_DIAGRAM.md  BIDI_IMPLEMENTATION_PSEUDOCODE.md  BIDI_PROBLEM_ILLUSTRATION.md  BIDI_SOLUTION_IDEAS.md  BIDI_SOLUTION_README.md  BIDI_TEXT_SELECTION_SOLUTION_IDEAS.md  CMakeLists.txt  EMBEDDED_FONTS_CONSOLIDATION.md  FONTMANAGER_REFACTOR.md
.ci/: script.sh
.github/: problem-matchers.json
.github/workflows/: build.yml
android/jni/: docview.cpp
android/src/org/coolreader/crengine/: BaseActivity.java
cr3gui/data/: cr3.css  dict.css  doc.css  docx.css  epub.css  fb2.css  htm.css  html5.css
cr3gui/data/hyph/: Bulgarian.pattern  Catalan.pattern  Dutch.pattern  English_US.pattern  Esperanto.pattern  Finnish.pattern  French.pattern  German.pattern  Irish.pattern  Latin.pattern  Malayalam.pattern  Norwegian.pattern  Occitan.pattern  Portuguese.pattern  Portuguese_BR.pattern  Russian.pattern  Russian_EnGB.pattern  Russian_EnUS.pattern  Serbian.pattern  Slovak.pattern  Spanish.pattern  languages.json
cr3gui/src/: cr3gui.vcproj  viewdlg.cpp
cr3qt/src/: cr3qt.pro  cr3widget.cpp  mainwindow.cpp  mainwindow.h  searchdlg.cpp  tocdlg.cpp
cr3qt/src/i18n/: cr3_bg.ts  cr3_cs.ts  cr3_de.ts  cr3_es.ts  cr3_hu.ts  cr3_pl.ts  cr3_ru.ts  cr3_uk.ts
crengine/Tools/Fb2Linux/: fb2v.cpp
crengine/Tools/Fb2Test/: Fb2Test.cpp  Fb2Test.vcproj
crengine/Tools/FontConv/: LFntConvDlg.cpp
crengine/Tools/GammaGen/: gammagen.cpp
crengine/Tools/HyphConv/: mkpattern.cpp
crengine/Tools/langstat/: langstat.cpp
crengine/include/: bookformats.h  chmfmt.h  cp_stats.h  cr3version.h  crengine.h  cri18n.h  crlocks.h  crsetup.h  crsetup.h.cmake  crskin.h  crtrace.h  crtxtenc.h  cssdef.h  docxfmt.h  dtddef.h  epubfmt.h  fb2def.h  fb3fmt.h  gammatbl.h  hist.h  hyphman.h  lstridmap.h  lvarray.h  lvautoptr.h  lvdocview.h  lvdocviewcmd.h  lvdocviewprops.h  lvdrawbuf.h  lvfnt.h  lvfntman.h  lvhashtable.h  lvimg.h  lvmemman.h  lvopc.h  lvpagesplitter.h  lvplatform.h  lvptrvec.h  lvref.h  lvrefcache.h  lvrend.h  (+19 more)
crengine/lib/projects/codeblocks/: cr3view.cbp  crengine.cbp
crengine/lib/projects/vc2008/: crengine.vcproj
crengine/lib/projects/vc6/: crengine.dsp
crengine/qimagescale/: qdrawhelper_p.h  qimagescale.cpp  qimagescale_neon.cpp  qimagescale_p.h  qimagescale_sse4.cpp
crengine/src/: bookformats.cpp  chmfmt.cpp  cp_stats.cpp  cri18n.cpp  crskin.cpp  crtxtenc.cpp  docxfmt.cpp  epubfmt.cpp  fb3fmt.cpp  hist.cpp  hyphman.cpp  lstridmap.cpp  lvdocview.cpp  lvdrawbuf.cpp  lvfnt.cpp  lvfntman.cpp  lvimg.cpp  lvmemman.cpp  lvopc.cpp  lvpagesplitter.cpp  lvrend.cpp  lvstream.cpp  lvstring.cpp  lvstsheet.cpp  lvstyles.cpp  lvtextfm.cpp  lvtinydom.cpp  lvxml.cpp  mathml.cpp  mathml_css_h.css  mdfmt.cpp  mdfmt.h  odtfmt.cpp  odxutil.cpp  odxutil.h  pdbfmt.cpp  props.cpp  renderutil.cpp  rtfimp.cpp  textlang.cpp  (+2 more)
tests/: FONT_MANAGER_TEST_PLAN.md  font-manager-test.epub  make_test_epub.py
tests/font-manager-test.sdr/: metadata.epub.lua
tests/make_test_epub.sdr/: metadata.py.lua
utils/: clang_tidy_wrapper.lua  cppcheck_wrapper.lua  ga_group.sh  lint.mk  lint.sh  lint_languages_catalog.sh  syncheck.jq  syncheck.sh
